# UniChat

./: .gitignore  .prettierrc  COMMIT_PLAN.md  ROADMAP.md  angular.json  package.json  tsconfig.json
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mcp-bridge.json
src-tauri/scripts/: generate-android-icons.py
src-tauri/src/: constants.rs  lib.rs  loging.rs  main.rs
src-tauri/src/commands/: auth-provider.command.rs  chat-account.command.rs  chat-channel.command.rs  chat-message.command.rs  chat.command.rs  crud.macro.rs  crud_command.rs  custom-emote.command.rs  dashboard-preferences.command.rs  icons.command.rs  kick.command.rs  logger.command.rs  macros.rs  mod.rs  overlay.command.rs  storage.command.rs  twitch.command.rs  twitch_irc.command.rs  update.command.rs  youtube.command.rs
src-tauri/src/constants/: mod.rs
src-tauri/src/entities/: chat-account.entity.rs  chat-channel.entity.rs  chat-message.entity.rs  custom-emote.entity.rs  dashboard-preferences.entity.rs  mod.rs  response.entity.rs
src-tauri/src/errors/: app.error.rs  app_error.rs  mod.rs
src-tauri/src/helpers/: auth.twitch.helper.rs  config.helper.rs  http_client.rs  http_error_helper.rs  message_formatter_helper.rs  message_sanitizer_helper.rs  mod.rs  oauth-config.helper.rs  oauth.config.helper.rs  oauth_config.helper.rs  sanitizer.helper.rs  youtube.api.helper.rs  youtube_api_auth.helper.rs  youtube_api_channel.helper.rs  youtube_api_chat.helper.rs
src-tauri/src/models/: auth-account.model.rs  auth-oauth.model.rs  auth_account.model.rs  mod.rs  (+6 more)
(+394 files in other folders)
